compiler-skeleton/tests/parse-error/parse_array.ln
a:int[1];
a:int[][];
a:int[1][3];

a={0,0,0,0};